dev  2011-04-27
- fixed unicode IO, added unicode tests
- add some formatting to Perl5 and Javascript output
- methods: map, grep
- operators: x

7.0  2011-04-20
- supported backends: Perl 5, Python 2.6, Javascript

- added "perlito" command-line compiler and shell
- new distribution "v6.pm" (Perlito in Perl 5)
  This replaces Pugs::Compiler::Perl5 as the v6.pm compiler in CPAN.
- correct operator precedence
- interpolation of variables and code in strings
- 'unless' and statement modifiers
- several fixes in List, Hash, Array, Block, Bool, Str, Mu
- operators: numeric autoincrements, defined-or, range

  Regressions:

- removed '-B' command line flag
- backends pending upgrade to the new AST: Go, Common Lisp, Ruby 1.9, Eval
- backends not supported in this version: Parrot, Rakudo, Clojure

6.0  2010-07-27
- Ruby backend bootstrap.
- more tests

5.0  2010-07-19
- Python backend bootstrap.
- use variable assignment instead of binding - that is, use '=' instead of ':='
- 'use' - all backends can now use Test.pm
- 'elsif'
- 'loop' 
- regex quantifiers
- Lisp backend now bootstraps with the 'util/mp6.pl' compiler

4.1  2010-03-24
- floating point numbers
- 'while' loop

4.0  2010-03-20
- Go backend bootstrap.
  The Go backend was updated to the latest Go language spec. 
- Perl5 backend optimized; 30% faster
- More library functions, added to all backends
- New 'Eval.pm' module - implements a MiniPerl6 interpreter in MiniPerl6.
  This should add some debugging capabilities later on.
- New test suite. See README on how to use 'prove' for each backend.
- New compiler options to create binary executables
- Currently the stable backends are: Perl5, Javascript, JVM, Lisp, Go.
  See README for bootstrapping instructions for all backends.
- Removed support for features that are not standard Perl6.

3.0  2010-01-21
- Go language backend; using Go: http://golang.org
- Java-class backend; using Rhino: http://www.mozilla.org/rhino