@@ -3,6 +3,7 @@ dev  2011-04-27
 - add some formatting to Perl5 and Javascript output
 - methods: map, grep
 - operators: x
+- source code moved to src/ directory
 
 7.0  2011-04-20
 - supported backends: Perl 5, Python 2.6, Javascript
